--- a/packages/await-to/package.json
+++ b/packages/await-to/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsts-utils/await-to",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "type": "module",
   "main": "./dist/index.js",
