--- a/packages/await-to/package.json
+++ b/packages/await-to/package.json
@@ -29,7 +29,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
-    "version": "changesets version",
+    "update": "changesets version",
     "publish": "changesets publish"
   },
   "devDependencies": {
