Update version script

--- a/packages/await-to/package.json
+++ b/packages/await-to/package.json
@@ -29,17 +29,17 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
-    "update": "changesets version",
+    "update-version": "changesets version",
     "publish": "changesets publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.28.1",
+    "@changesets/cli": "^2.29.2",
     "@jsts-utils/eslint-config": "workspace:*",
     "@jsts-utils/typescript-config": "workspace:*",
     "@types/node": "catalog:",
-    "@vitest/coverage-istanbul": "^3.0.8",
+    "@vitest/coverage-istanbul": "^3.1.2",
     "tsup": "^8.4.0",
     "typescript": "catalog:",
-    "vitest": "^3.0.7"
+    "vitest": "^3.1.2"
   }
 }
